--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -70,3 +70,12 @@ background-color: white;
 .case_study_single_hero {
   padding: 250px 0;
 }
+.big {
+  font-size: 5em;
+  margin-top: 0;
+  line-height: 1em;
+}
+
+.link-color {
+ color: #2ba6cb;
+}
