--- a/app/views/pages/case_study_single.html.erb
+++ b/app/views/pages/case_study_single.html.erb
@@ -36,53 +36,8 @@
   </div>
 </div>
 
-<div class="row pad-more">
-  <h2 class="align-center"></h2>
-  <ul class="large-block-grid-4 align-center">
-    <li>
-      <img class="fifty-radius"  src="http://placehold.it/200x200">
-       <h3>Improv Effect</h3>
-       <a href="/case_study_single" class="tiny button radius">Read More</a>
-    </li>
-    <li>
-      <img class="fifty-radius"  src="http://placehold.it/200x200">
-       <h3>Improv Effect</h3>
-       <a href="/case_study_single" class="tiny button radius">Read More</a>
-    </li>
 
-    <li>
-      <img class="fifty-radius"  src="http://placehold.it/200x200">
-       <h3>Improv Effect</h3>
-       <a href="/case_study_single" class="tiny button radius">Read More</a>
-    </li>
-    <li>
-      <img class="fifty-radius"  src="http://placehold.it/200x200">
-       <h3>Improv Effect</h3>
-       <a href="/case_study_single" class="tiny button radius">Read More</a>
-    </li>
-    <li>
-      <img class="fifty-radius"  src="http://placehold.it/200x200">
-       <h3>Improv Effect</h3>
-       <a href="/case_study_single" class="tiny button radius">Read More</a>
-    </li>
-    <li>
-      <img class="fifty-radius"  src="http://placehold.it/200x200">
-       <h3>Improv Effect</h3>
-       <a href="/case_study_single" class="tiny button radius">Read More</a>
-    </li>
-    <li>
-      <img class="fifty-radius"  src="http://placehold.it/200x200">
-       <h3>Improv Effect</h3>
-       <a href="/case_study_single" class="tiny button radius">Read More</a>
-    </li>
-    <li>
-      <img class="fifty-radius"  src="http://placehold.it/200x200">
-       <h3>Improv Effect</h3>
-       <a href="/case_study_single" class="tiny button radius">Read More</a>
-    </li>
-
-  </ul>
-</div>
+<%= render 'partials/more_work' %>
 
 </div>
 <%= render 'partials/footer' %>
