--- a/app/views/pages/community.html.erb
+++ b/app/views/pages/community.html.erb
@@ -7,7 +7,7 @@
          Community
        </h2>
        <h4 class="white">
-Cras quis turpis venenatis, malesuada nisi a, dapibus velit. Quisque non tincidunt arcu. Proin eget mi augue. Ut nec laoreet diam.        </h4>
+We're actively involved in our community both locally and globally. Check out some of the great things we do.       </h4>
     </div>
    </div>
  </div>
@@ -15,25 +15,27 @@ Cras quis turpis venenatis, malesuada nisi a, dapibus velit. Quisque non tincidu
   <section class="events-block row pad">
     <h2 class="align-center pad">Upcoming Events</h2>
 
-    <div class="current-events large-6 columns">
+    <div class="large-6 columns">
+        <h1 class="big">October 05</h1>
+        <p>9am to 5pm</p>
+        <h4 class="date-description">Rails Training at UW</h4>
+        <a href="http://www.meetup.com/Mad-Railers/events/142236152/">Details Here</a>
+    </div>
 
-      <a href="#" class="date-content">
-        <h2 class="date">FEB 02</h2>
-        <h4 class="date-description">Cras quis turpis venenatis, malesuada nisi a, dapibus velit. Quisque non tincidunt arcu. Proin eget mi augue. Ut nec laoreet diam.</h4>
-      </a>
-    </div>
     <div class="other-events-1 large-3 columns">
-      <a href="#" class="date-content">
-        <h3 class="date">September 10</h3>
-        <h5 class="date-description">Cras quis turpis venenatis, malesuada nisi a, dapibus velit. Quisque non tincidunt arcu. Proin eget mi augue. Ut nec laoreet diam.</h5>
-      </a>
+      <h3 class="date">October 8</h3>
+      <h4>Women in Tech Meetup</h4>
+      <p class="date-description">A group of women interested in learning and teaching, as well as building a community of women in tech in Madison.</p>
+      <a href="http://www.meetup.com/Madison-Women-in-Tech/">Details Here</a>
     </div>
-    <div class="other-events-2 large-3 columns">
-      <a href="#" class="date-content">
-        <h3 class="date">October 15</h3>
-        <h5 class="date-description">Cras quis turpis venenatis, malesuada nisi a, dapibus velit. Quisque non tincidunt arcu. Proin eget mi augue. Ut nec laoreet diam.</h5>
-      </a>
+
+    <div class="other-events-1 large-3 columns">
+      <h3 class="date">Ocotober 18</h3>
+      <h4>Rails Rumble</h4>
+      <p class="date-description">The Rails Rumble is a distributed programming competition where teams of one to four people, from all over the world, have 48 hours to build an innovative web application.</p>
+      <a href="http://railsrumble.com/">Details Here</a>
     </div>
+
   </section>
 
    <section class="blog-oss-content">
@@ -67,8 +69,8 @@ Cras quis turpis venenatis, malesuada nisi a, dapibus velit. Quisque non tincidu
           </ul>
           <div class="row">
 
-            <a href="#" class="button radius">See All Our Projects on Github</a>
-            <a href="#" class="button radius">Visit Upward</a>
+            <a href="https://github.com/bendyworks" class="button radius">See All Our Projects on Github</a>
+            <a href="http://upward-mockup.herokuapp.com/" class="button radius">Visit Upward</a>
           </div>
         </section><!-- end of first section -->
 
@@ -159,62 +161,7 @@ Cras quis turpis venenatis, malesuada nisi a, dapibus velit. Quisque non tincidu
                 </a>
                 <p>Madison, WI, July 25, 2014</p>
               </li>
-              <li class="lowlight pad">
-                <h5>Software Craftmanship’s Missing Link: Apprenticeship</h5>
-                <em class="name">Matt Gauger</em>
-                <a href="#">
-                  <p>Nickel City Ruby</p>
-                </a>
-                <p>Madison, WI, July 25, 2014</p>
-              </li>
-              <li class="lowlight pad">
-                <h5>Software Craftmanship’s Missing Link: Apprenticeship</h5>
-                <em class="name">Matt Gauger</em>
-                <a href="#">
-                  <p>Nickel City Ruby</p>
-                </a>
-                <p>Madison, WI, July 25, 2014</p>
-              </li>
-              <li class="lowlight pad">
-                <h5>Software Craftmanship’s Missing Link: Apprenticeship</h5>
-                <em class="name">Matt Gauger</em>
-                <a href="#">
-                  <p>Nickel City Ruby</p>
-                </a>
-                <p>Madison, WI, July 25, 2014</p>
-              </li>
-              <li class="lowlight pad">
-                <h5>Software Craftmanship’s Missing Link: Apprenticeship</h5>
-                <em class="name">Matt Gauger</em>
-                <a href="#">
-                  <p>Nickel City Ruby</p>
-                </a>
-                <p>Madison, WI, July 25, 2014</p>
-              </li>
-              <li class="lowlight pad">
-                <h5>Software Craftmanship’s Missing Link: Apprenticeship</h5>
-                <em class="name">Matt Gauger</em>
-                <a href="#">
-                  <p>Nickel City Ruby</p>
-                </a>
-                <p>Madison, WI, July 25, 2014</p>
-              </li>
-              <li class="lowlight pad">
-                <h5>Software Craftmanship’s Missing Link: Apprenticeship</h5>
-                <em class="name">Matt Gauger</em>
-                <a href="#">
-                  <p>Nickel City Ruby</p>
-                </a>
-                <p>Madison, WI, July 25, 2014</p>
-              </li>
-              <li class="lowlight pad">
-                <h5>Software Craftmanship’s Missing Link: Apprenticeship</h5>
-                <em class="name">Matt Gauger</em>
-                <a href="#">
-                  <p>Nickel City Ruby</p>
-                </a>
-                <p>Madison, WI, July 25, 2014</p>
-              </li>
+
 
 
             </ul>
@@ -255,8 +202,8 @@ Cras quis turpis venenatis, malesuada nisi a, dapibus velit. Quisque non tincidu
                   <em>Ian Cordasco</em>
                   <p>The Changelog</p>
                 </li>
-
               </ul>
+                <a href="/community_blog_archives" class="button radius">Archives</a>
             </div>
             <div class="large-6 columns">
              <h2 class="align-center">Press</h2>
