--- a/app/views/pages/how_we_work.html.erb
+++ b/app/views/pages/how_we_work.html.erb
@@ -1,75 +1,170 @@
 <%= render 'partials/header' %>
 <div class="padder">
   <div class="hero">
-    <div class="row">
+    <div class="row pad">
       <div class="large-8 push-4 columns">
         <h2 class="white">
           About Us
         </h2>
         <h4 class="white">
          A great software experience requires elegant, flexible code and a delightful, intuitive interface. The result is a digital application that looks beautiful, functions perfectly and delights users. Our team works together to craft an integrated experience so your application exceeds expectations.
-         </h4>
+       </h4>
      </div>
+   </div>
+ </div>
+
+ <div class="our-values">
+  <div class="row pad">
+    <div class="how-we-work-intro">
+      <h1> HOW WE WORK</h1>
+      <h4>The way we approach projects at Bendyworks can be summed up in a single word: flexibility. From the contact we have with you down to the methods we use to code, our entire process revolves around staying nimble and adaptable to your needs. So how exactly do we go about doing that? Well…</h4>
     </div>
-  </div>
+    <div class="align-center pad">
+      <a class="button large radius value-hider" href="#">Details</a>
+    </div>
+    <div id="values" class="individual-values large-12 large-centered columns">
 
-  <div class="our-values">
-    <div class="row">
-      <div class="how-we-work-intro">
-        <h1> HOW WE WORK</h1>
-        <h4>The way we approach projects at Bendyworks can be summed up in a single word: flexibility. From the contact we have with you down to the methods we use to code, our entire process revolves around staying nimble and adaptable to your needs. So how exactly do we go about doing that? Well…</h4>
-      </div>
-      <div class="individual-values large-10 large-centered columns">
-        <ul class="how-values">
-          <li class="value-item">
-            <h2 class="value-title">
-              We talk with you. A lot.
-            </h2>
-            <p class="value-description">
-              Agile course correction requires constant feedback, and we keep our lines of communication clear and free for our clients. Bendyworks believes in daily, efficient contact in a way that works for you. With regular feedback your software will take shape around your changing needs and priorities without the rigid demands of traditional software development.
-            </p>
-          </li>
-          <li class="value-item">
-            <h2 class="value-title">
-              We don't do fixed bids.
-            </h2>
-            <p class="value-description">
-             Software projects rarely end up exactly where you planned at the beginning. Because we charge by time and materials, you can change the scope of your project in a natural way as it evolves. Need new features? Need to stop a project and start it up again later? Bendyworks is flexible enough to adjust to your needs on the fly, without having to rework a contract.
-           </p>
-         </li>
-         <li class="value-item">
+      <div class="row pad">
+        <div class="large-7 left">
           <h2 class="value-title">
-            We work in pairs.
+            We talk with you. A lot.
           </h2>
           <p class="value-description">
-            Our programmers come dual-core. We adhere to the agile principle of pair programming to improve the accuracy, elegance, and development time of the software we write for you. With constant code review, superior project navigation, and instant bug detection, there really is no better way to develop software. Pair programming takes experience, trust, creativity, and talent—qualities each coder at Bendyworks brings to the table.
+            Agile course correction requires constant feedback, and we keep our lines of communication clear and free for our clients. Bendyworks believes in daily, efficient contact in a way that works for you. With regular feedback your software will take shape around your changing needs and priorities without the rigid demands of traditional software development.
           </p>
-        </li>
-        <li class="value-item">
-          <h2 class="value-title">
-            We use BDD and TDD.
-          </h2>
-          <p class="value-description">
-           By taking the traditional development path and turning it on its head, Test Driven Development and Behavior Driven Development both dramatically speed up the development time and improve the accuracy of a project.
+        </div>
+        <div class="large-5 right">
+          <img class="fifty-radius"  src="http://placehold.it/300x300">
+        </div>
+      </div>
 
-           BDD puts the purpose of code in natural, plain language—so you never lose focus of what should come next and why. TDD focuses on what each part of a program should do, determining what it would look like for code to be successful and then developing it from there. Put them together, and it's just feature delivery after feature delivery.
-         </p>
-       </li>
-       <li class="value-item">
+      <div class="row pad">
+       <div class="large-5 left">
+        <img class="fifty-radius"  src="http://placehold.it/300x300">
+      </div>
+      <div class="large-7 right">
+        <h2 class="value-title">
+          We don't do fixed bids.
+        </h2>
+        <p class="value-description">
+         Software projects rarely end up exactly where you planned at the beginning. Because we charge by time and materials, you can change the scope of your project in a natural way as it evolves. Need new features? Need to stop a project and start it up again later? Bendyworks is flexible enough to adjust to your needs on the fly, without having to rework a contract.            </p>
+       </div>
+
+     </div>
+
+
+     <div class="row pad">
+      <div class="large-7 left">
+        <h2 class="value-title">
+          We work in pairs.
+        </h2>
+        <p class="value-description">
+          Our programmers come dual-core. We adhere to the agile principle of pair programming to improve the accuracy, elegance, and development time of the software we write for you. With constant code review, superior project navigation, and instant bug detection, there really is no better way to develop software. Pair programming takes experience, trust, creativity, and talent—qualities each coder at Bendyworks brings to the table.
+        </p>
+      </div>
+      <div class="large-5 right">
+        <img class="fifty-radius"  src="http://placehold.it/300x300">
+      </div>
+    </div>
+
+
+    <div class="row pad">
+     <div class="large-5 left">
+      <img class="fifty-radius"  src="http://placehold.it/300x300">
+    </div>
+    <div class="large-7 right">
+      <h2 class="value-title">
+        We use BDD and TDD.
+      </h2>
+      <p class="value-description">
+        By taking the traditional development path and turning it on its head, Test Driven Development and Behavior Driven Development both dramatically speed up the development time and improve the accuracy of a project.
+
+        BDD puts the purpose of code in natural, plain language—so you never lose focus of what should come next and why. TDD focuses on what each part of a program should do, determining what it would look like for code to be successful and then developing it from there. Put them together, and it's just feature delivery after feature delivery.      </p>
+      </div>
+
+    </div>
+
+    <div class="row pad">
+      <div class="large-7 left">
         <h2 class="value-title">
           We use the right tools.
         </h2>
-        <p class="value=description">
-         By taking the traditional development path and turning it on its head, Test Driven Development and Behavior Driven Development both dramatically speed up the development time and improve the accuracy of a project.
+        <p class="value-description">
+          By taking the traditional development path and turning it on its head, Test Driven Development and Behavior Driven Development both dramatically speed up the development time and improve the accuracy of a project.
 
-         BDD puts the purpose of code in natural, plain language—so you never lose focus of what should come next and why. TDD focuses on what each part of a program should do, determining what it would look like for code to be successful and then developing it from there. Put them together, and it's just feature delivery after feature delivery.
-       </p>
-     </li>
-   </ul>
- </div>
+          BDD puts the purpose of code in natural, plain language—so you never lose focus of what should come next and why. TDD focuses on what each part of a program should do, determining what it would look like for code to be successful and then developing it from there. Put them together, and it's just feature delivery after feature delivery.
+        </p>
+      </div>
+      <div class="large-5 right">
+        <img class="fifty-radius"  src="http://placehold.it/300x300">
+      </div>
+    </div>
+
+
+  </div>
 </div>
 </div>
 </div>
+
+<div class="services">
+  <div class="row">
+    <div class="services-tools large-10 large-centered columns">
+
+      <ul class="services-list large-5 columns">
+         <h2 class="services-title">
+        Services
+      </h2>
+        <li class="service-list-item">
+          <h3>Wep Application Development</h3>
+        </li>
+         <li class="service-list-item">
+          <h3>Mentoring</h3>
+        </li>
+         <li class="service-list-item">
+          <h3>Consulting</h3>
+        </li>
+         <li class="service-list-item">
+          <h3>User Experience Design</h3>
+        </li>
+         <li class="service-list-item">
+          <h3>Branding</h3>
+        </li>
+         <li class="service-list-item">
+          <h3>Visual/UI Design</h3>
+        </li>
+         <li class="service-list-item">
+          <h3>Mobile Development</h3>
+        </li>
+      </ul>
+
+
+      <ul class="tools-list large-5 columns">
+         <h2 class="tools-title">
+        Tools
+      </h2>
+        <li class="tools-list-item">
+          <h3>Ruby on Rails</h3>
+        </li>
+         <li class="tools-list-item">
+          <h3>Clojure</h3>
+        </li>
+         <li class="tools-list-item">
+          <h3>HTML5 & CSS3</h3>
+        </li>
+         <li class="tools-list-item">
+          <h3>Javascript</h3>
+        </li>
+         <li class="tools-list-item">
+          <h3>Objective-C</h3>
+        </li>
+         <li class="tools-list-item">
+          <h3>GitHub</h3>
+        </li>
+      </ul>
+    </div>
+  </div>
+</div>
+
 <%= render 'partials/people' %>
 
 <%= render 'partials/footer' %>
