--- a/app/views/pages/our_blog.html.erb
+++ b/app/views/pages/our_blog.html.erb
@@ -5,9 +5,73 @@
   <%= render 'partials/blog_header' %>
 
   <div class="blog-intro row">
-     <div class="blog-entry pad large-4 columns">
-       <img src="http://placehold.it/200x200">
+       <div class="blog-entry pad large-4 columns">
+       <img src="http://placehold.it/300x200">
        <div class="blog-title">
+        <h5 class="align-center"><em>Sept 20, 2013</em></h5>
+         <h3>
+Sed vitae interdum dui. Mauris rhoncus massa tellus
+        </h3>
+         <div class="sub-headline">
+            <p>
+Aenean quis pellentesque arcu, sit amet laoreet dui.         </p>
+         </div>
+         <a href="/our_blog_deep" class="button">Read More</a>
+       </div>
+     </div>
+     <div class="blog-entry pad large-4 columns">
+       <img src="http://placehold.it/300x200">
+       <div class="blog-title">
+        <h5 class="align-center"><em>Sept 20, 2013</em></h5>
+         <h3>
+           ConcertCam
+         </h3>
+         <div class="sub-headline">
+            <p>
+           acus, quis tempor felis tortor aliquam nulla. Cras egestas sem vel mi euismod molestie
+           </p>
+         </div>
+         <a href="/our_blog_deep" class="button">Read More</a>
+       </div>
+     </div>
+     <div class="blog-entry pad large-4 columns">
+       <img src="http://placehold.it/300x200">
+       <div class="blog-title">        <h5 class="align-center"><em>Sept 16, 2013</em></h5>
+
+         <h3>
+           Nunc semper, libero et placerat tempor, velit lorem ullamcorpe
+         </h3>
+         <div class="sub-headline">
+            <p>
+           acus, quis tempor felis tortor aliquam nulla. Cras egestas sem vel mi euismod molestie
+           </p>
+         </div>
+         <a href="/our_blog_deep" class="button">Read More</a>
+       </div>
+     </div>
+   </div>
+
+
+     <div class="blog-intro row">
+         <div class="blog-entry pad large-4 columns">
+       <img src="http://placehold.it/300x200">
+       <div class="blog-title">        <h5 class="align-center"><em>Sept 14, 2013</em></h5>
+
+         <h3>
+          From Ruby to Haskell, Part 2: Similarity, Refactoring, and Patterns
+         </h3>
+         <div class="sub-headline">
+            <p>
+How ruby and haskell are similar and, unavoidably, how they're different.           </p>
+         </div>
+         <a href="/our_blog_deep" class="button">Read More</a>
+       </div>
+     </div>
+
+     <div class="blog-entry pad large-4 columns">
+       <img src="http://placehold.it/300x200">
+       <div class="blog-title">        <h5 class="align-center"><em>Sept 10, 2013</em></h5>
+
          <h3>
            Nunc semper, libero et placerat tempor, velit lorem ullamcorpe
          </h3>
@@ -20,22 +84,9 @@
        </div>
      </div>
      <div class="blog-entry pad large-4 columns">
-       <img src="http://placehold.it/200x200">
-       <div class="blog-title">
-         <h3>
-           Nunc semper, libero et placerat tempor, velit lorem ullamcorpe
-         </h3>
-         <div class="sub-headline">
-            <p>
-           acus, quis tempor felis tortor aliquam nulla. Cras egestas sem vel mi euismod molestie
-           </p>
-         </div>
-         <a href="/our_blog_deep" class="button">Read More</a>
-       </div>
-     </div>
-     <div class="blog-entry pad large-4 columns">
-       <img src="http://placehold.it/200x200">
-       <div class="blog-title">
+       <img src="http://placehold.it/300x200">
+       <div class="blog-title">        <h5 class="align-center"><em>Sept 05, 2013</em></h5>
+
          <h3>
            Nunc semper, libero et placerat tempor, velit lorem ullamcorpe
          </h3>
@@ -52,54 +103,24 @@
 
      <div class="blog-intro row">
      <div class="blog-entry pad large-4 columns">
-       <img src="http://placehold.it/200x200">
-       <div class="blog-title">
-         <h3>
-           Nunc semper, libero et placerat tempor, velit lorem ullamcorpe
-         </h3>
-         <div class="sub-headline">
-            <p>
-           acus, quis tempor felis tortor aliquam nulla. Cras egestas sem vel mi euismod molestie
-           </p>
-         </div>
-         <a href="/our_blog_deep" class="button">Read More</a>
-       </div>
-     </div>
-     <div class="blog-entry pad large-4 columns">
-       <img src="http://placehold.it/200x200">
-       <div class="blog-title">
-         <h3>
-           Nunc semper, libero et placerat tempor, velit lorem ullamcorpe
-         </h3>
-         <div class="sub-headline">
-            <p>
-           acus, quis tempor felis tortor aliquam nulla. Cras egestas sem vel mi euismod molestie
-           </p>
-         </div>
-         <a href="/our_blog_deep" class="button">Read More</a>
-       </div>
-     </div>
-     <div class="blog-entry pad large-4 columns">
-       <img src="http://placehold.it/200x200">
-       <div class="blog-title">
-         <h3>
-           Nunc semper, libero et placerat tempor, velit lorem ullamcorpe
-         </h3>
-         <div class="sub-headline">
-            <p>
-           acus, quis tempor felis tortor aliquam nulla. Cras egestas sem vel mi euismod molestie
-           </p>
-         </div>
-         <a href="/our_blog_deep" class="button">Read More</a>
-       </div>
-     </div>
-   </div>
+       <img src="http://placehold.it/300x200">
+       <div class="blog-title">        <h5 class="align-center"><em>Sept 01, 2013</em></h5>
 
+         <h3>
+           Nunc semper, libero et placerat tempor, velit lorem ullamcorpe
+         </h3>
+         <div class="sub-headline">
+            <p>
+           acus, quis tempor felis tortor aliquam nulla. Cras egestas sem vel mi euismod molestie
+           </p>
+         </div>
+         <a href="/our_blog_deep" class="button">Read More</a>
+       </div>
+     </div>
+     <div class="blog-entry pad large-4 columns">
+       <img src="http://placehold.it/300x200">
+       <div class="blog-title">        <h5 class="align-center"><em>August 24, 2013</em></h5>
 
-     <div class="blog-intro row">
-     <div class="blog-entry pad large-4 columns">
-       <img src="http://placehold.it/200x200">
-       <div class="blog-title">
          <h3>
            Nunc semper, libero et placerat tempor, velit lorem ullamcorpe
          </h3>
@@ -112,22 +133,9 @@
        </div>
      </div>
      <div class="blog-entry pad large-4 columns">
-       <img src="http://placehold.it/200x200">
-       <div class="blog-title">
-         <h3>
-           Nunc semper, libero et placerat tempor, velit lorem ullamcorpe
-         </h3>
-         <div class="sub-headline">
-            <p>
-           acus, quis tempor felis tortor aliquam nulla. Cras egestas sem vel mi euismod molestie
-           </p>
-         </div>
-         <a href="/our_blog_deep" class="button">Read More</a>
-       </div>
-     </div>
-     <div class="blog-entry pad large-4 columns">
-       <img src="http://placehold.it/200x200">
-       <div class="blog-title">
+       <img src="http://placehold.it/300x200">
+       <div class="blog-title">        <h5 class="align-center"><em>August 18, 2013</em></h5>
+
          <h3>
            Nunc semper, libero et placerat tempor, velit lorem ullamcorpe
          </h3>
