--- a/app/views/partials/_footer.html.erb
+++ b/app/views/partials/_footer.html.erb
@@ -1,19 +1,37 @@
-  <footer>
-  <div class="hiring align-center full-width white">
-    <h2>We're Hiring. Click here to Join the Team!</h2>
-  </div>
+<footer>
+  <a href="/careers/"><div class="hiring align-center full-width">
+    <h2 class="link-color">We're Hiring. Click here to Join the Team!</h2>
+  </div></a>
     <div class="footer row">
       <div class="large-12 columns">
-        <div class="large-3 columns">
-            Footer area 1
+        <div class="large-4 columns">
+            <p><a href="https://www.facebook.com/bendyworks">Facebook</a> / <a href="https://twitter.com/bendyworks">Twitter</a> / <a href="https://github.com/bendyworks">GitHub</a></p>
+            <h3>Madison / San Francisco</h3>
+            <h3>(877) 640-2913</h3>
+            <h3><a mailto:"info@bendyworks.com">info@bendyworks.com</a></h3>
         </div>
-        <div class="large-6 columns">
-            Footer area 2
+        <div class="large-4 columns">
+        <h3>Twitter</h3>
+     <p> Reminder: We're hosting a shindig at our office tomorrow, featuring @deltaspirit and @PhoxBand! RSVP here: http://delta-spirit-and-phox.bendyworks.com</p>
+      <h3>Upcoming Event</h3>
+      <a href="http://www.meetup.com/Mad-Railers/events/142236152/"><h4>
+October 05</h4>
+<p>Rails Training at UW</p></a>
         </div>
-        <div class="large-3 columns">
-            footer area 3
+        <div class="large-4 columns">
+          <h3>From the Blog</h3>
+          <p>September 10: Nunc semper, libero et placerat tempor, velit lorem ullamcorpe</p>
+          <p>September 15: Nunc semper, libero et placerat tempor, velit lorem ullamcorpe</p>
+          <p>September 18: Sed vitae interdum dui. Mauris rhoncus massa tellus</p>
         </div>
       </div>
+    </div>
+    <div class="row">
+      <div class="large-6 columns">
+      Signup for our Newsletter:
+      </div>
+      <div class="large-6 columns">
+        Copyright 2013 Bendyworks. All Rights Reserved.
     </div>
   </footer>
 </body>
