--- a/app/views/partials/_people.html.erb
+++ b/app/views/partials/_people.html.erb
@@ -4,10 +4,10 @@
     <div class="large-12 columns">
       <div class="home-box-content large-12 columns">
         <h2 class="intro-title-2">
-          Ut nunc mi, auctor sit amet tempor in
+          WHO WE ARE
         </h2>
         <p class"sub-title-2">
-          Phasellus mi ipsum, sagittis sit amet lectus sit amet, laoreet porttitor sapien. Mauris et odio molestie, vulputate orci ut, pharetra tellus. Donec vel porta ipsum. Nulla id sagittis risus. Donec interdum nisl at est mattis, ac venenatis quam luctus. Vivamus pharetra tortor ac blandit eleifend. Ut sed est quis ligula gravida fringilla.
+          Consider this a face book of agile, flexible web development and beautiful, elegant design. Whether you're researching us or want to know who is coding your software or designing your interface, click on any of the profiles below to learn more about each of our Bendyworkers.
         </p>
       </div>
     </div>
@@ -20,13 +20,12 @@
     <ul class="large-block-grid-3">
       <li>
         <div class="people_picture">
-        <%= render 'partials/people_overlay' %>
-        <img src="http://lorempixel.com/300/300/people" class="people_image">
+          <%= render 'partials/people_overlay' %>
+          <img src="http://lorempixel.com/300/300/people" class="">
         </div>
         <h2>
           Kelly Rauwerdink</h2>
-        <h3>Chief Wildcard</h3>
-        <h6>I make-a the arts and stuff.  Blah blah blah.</h6>
+        <h4>Chief Wildcard</h4>
       </li>
       <li>
         <div class="people_picture">
@@ -34,8 +33,7 @@
         <img src="http://lorempixel.com/300/300/people" class="people_image">
          </div>
         <h2>Chris Wilson</h2>
-        <h3>Mathamagician</h3>
-        <h6>I has the smarts and the thoughts.  Blah blah blah.</h6>
+        <h4>Mathamagician</h4>
       </li>
       <li>
         <div class="people_picture">
@@ -43,8 +41,7 @@
         <img src="http://lorempixel.com/300/300/people" class="people_image">
          </div>
          <h2>Gynnis Ritchie</h2>
-        <h3>Issue Monster</h3>
-        <h6>I writes the code, video the things, and talk about france.  Blah blah blah.</h6>
+        <h4>Issue Monster</h4>
       </li>
       <li>
         <div class="people_picture">
@@ -52,8 +49,7 @@
         <img src="http://lorempixel.com/300/300/people" class="people_image">
         </div>
         <h2>Matt Gauger</h2>
-        <h3>Robot Master</h3>
-        <h6>Get the droids and program them to do my bidding.  Blah blah blah.</h6>
+        <h4>Robot Master</h4>
       </li>
       <li>
         <div class="people_picture">
@@ -61,18 +57,15 @@
         <img src="http://lorempixel.com/300/300/people" class="people_image">
          </div>
          <h2>Brad Grzesiak</h2>
-        <h3>Boss level 6</h3>
-        <h6>Space farts and controlling them in small white suits.  Blah blah blah.</h6>
+        <h4>Boss level 6</h4>
       </li>
       <li>
         <div class="people_picture">
         <%= render 'partials/people_overlay' %>
         <img src="http://lorempixel.com/300/300/people" class="people_image">
         </div>
-        <h2>Jos
-          h "not a hassle" Hoff</h2>
-        <h3>Beacon of White Hope</h3>
-        <h6>Fresh out of the cave on to the mainland, touching code gingerly.  Blah blah blah.</h6>
+        <h2>Josh Hoff</h2>
+        <h4>Beacon of White Hope</h4>
       </li>
       <li>
         <div class="people_picture">
@@ -80,8 +73,7 @@
         <img src="http://lorempixel.com/300/300/people" class="people_image">
        </div>
         <h2>Joe Nelson</h2>
-        <h3>Master of the Paralell Universe</h3>
-        <h6>Making a place for code and the fog at the same time, with minions.</h6>
+        <h4>Master of the Paralell Universe</h4>
       </li>
       <li>
         <div class="people_picture">
@@ -90,8 +82,7 @@
         </div>
         <h2>
           Stephen Anderson</h2>
-        <h3>Boss level 12</h3>
-        <h6>Beard growing specialist and twerking.  Blah blah blah.</h6>
+        <h4>Boss level 12</h4>
       </li>
       <li>
         <div class="people_picture">
@@ -99,8 +90,7 @@
         <img src="http://lorempixel.com/300/300/people" class="people_image">
      </div>
         <h2>Mic Funk</h2>
-        <h3>Brought the Funk</h3>
-        <h6>Tests the things and cleaner of Kelly's cruft.  Blah blah blah.</h6>
+        <h4>Brought the Funk</h4>
       </li>
       <li>
         <div class="people_picture">
@@ -108,8 +98,7 @@
         <img src="http://lorempixel.com/300/300/people" class="people_image">
      </div>
         <h2>Amy Unger</h2>
-        <h3>Book Wrangler</h3>
-        <h6>Pushes the buttons with ease. blah blah blah</h6>
+        <h4>Book Wrangler</h4>
       </li>
       <li>
         <div class="people_picture">
@@ -117,8 +106,7 @@
         <img src="http://lorempixel.com/300/300/people" class="people_image">
          </div>
          <h2>Devin Walters</h2>
-        <h3>Guitar Tuner and gnar gnar</h3>
-        <h6>Practices the kitten keyboard on the daily.  Blah blah blah.</h6>
+        <h4>Guitar Tuner</h4>
       </li>
       <li>
         <div class="people_picture">
@@ -126,8 +114,7 @@
           <img src="http://lorempixel.com/300/300/people" class="people_image">
         </div>
         <h2>Lisa Boren</h2>
-        <h3>Bean Counter</h3>
-        <h6>Plans all the binge drinking events and then holds our hair back.  Blah blah blah.</h6>
+        <h4>Bean Counter</h4>
       </li>
       <li>
         <div class="people_picture">
@@ -135,8 +122,7 @@
         <img src="http://lorempixel.com/300/300/people" class="people_image">
          </div>
         <h2>Ian Cordasco</h2>
-        <h3>Nerd King of Pythonia</h3>
-        <h6>Drinks all of the nearby lands water supply in a day. blah blah blah.</h6>
+        <h4>Nerd King of Pythonia</h4>
       </li>
       <li>
         <div class="people_picture">
@@ -144,8 +130,7 @@
          <img src="http://lorempixel.com/300/300/people" class="people_image">
       </div>
       <h2>YOU!</h2>
-      <h3>COULD!</h3>
-      <h6>BE HERE! blah blah blah.</h6>
+      <h4>We're Always Hiring Talented and Interesting People</h4>
     </li>
 
   </div>
