--- a/app/views/partials/_people_overlay.html.erb
+++ b/app/views/partials/_people_overlay.html.erb
@@ -1,6 +1,6 @@
-<p class="image_overlay">
-  Twitter
-  GitHub
-  Dribbble
-  Email
-</p>
+<div class="image_overlay">
+  <a class="twitter" href="#">Twitter</a>
+  <a class="twitter" href="#">GitHub</a>
+  <a class="twitter" href="#">Dribbble</a>
+  <a class="twitter" href="#">Email</a>
+</div>
