--- a/app/assets/stylesheets/_footer.css.scss
+++ b/app/assets/stylesheets/_footer.css.scss
@@ -1,11 +1,13 @@
 footer {
   position: relative;
   z-index: 10;
-  height: 300px;
   background-color: #4f4f4f;
   color: white;
+  h2, h3, h4 {
+    color: white;
+  }
   .hiring {
-    background-color: #26acc4;
+    background-color: #DDD;
     padding: 25px 0;
   }
   .footer {
