--- a/app/views/pages/careers.html.erb
+++ b/app/views/pages/careers.html.erb
@@ -1,172 +1,90 @@
 <%= render 'partials/header' %>
-
-    <div class="not-home-hero-image">
-    <div class="intro-content">
-      <div class="intro-careers">
-        <div class="row">
-          <div class="intro-content right large-6 columns">
-          <h2 class="intro-title">
-            Join Us!
-          </h2>
-          <h4 class="sub-title">
-           Ut sit amet enim eu tellus convallis semper ac sed dolor.
-          </h4>
+<div class="padder">
+ <div class="hero">
+   <div class="row">
+     <div class="large-8 push-4 columns">
+       <h2 class="white">Become a Bendyworker</h2>
+        <h4 class="white">
+          Bendyworks is a forward-thinking company that's bootstrapped its way to become a go-to source in the fields or software development and design. We offer a fantastic environment, provide great benefits, and value hard workers.
+        </h4>
+      </div>
         </div>
       </div>
-    </div>
-  </div>
-</div>
+      <div class="full-width light-gray pad">
+        <div class="row">
+          <div class="large-12 columns">
+            <h2 class="pad">At Bendyworks we create positions for the people we think will be valuable to the company. Everyone who works here is talented, flexible, and knows how to work in a team. We're currently looking for:</h2>
+          </div>
+            <div class="large-12 columns">
+              <h3>DEVELOPERS</h3>
+              <p>Were Bendyworks a normal company, you might land on this page expecting to find things like "Ruby programmer needed, three to five years of code-monkeying required." We don't quite work like that, however. If you're the type of person who learns new languages as a matter of course; who contributes to open source for fun; and who ships code with a calm and collected professionalism, let's talk: you seem like our kind of developer.</p>
+            </div>
+            <div class="large-12 columns">
+              <h3>DESIGNERS</h3>
+              <p>We love design. We love design so much, we helped put on the first ever uxmad conference. We love design so much, we want you on our team, because you're driven, talented, and engaging.</p>
+            </div>
+            <div class="align-center">
+              <a href="#" class="button large radius align-center">Apply Now</a>
+            </div>
+        </div>
+        <div class="row">
+          <div class="large-8 large-centered columns pad">
+            <h2 class="align-center">WHAT TO EXPECT</h2>
+            <p>As part of our team, you'll join us in our gorgeous office in downtown Madison, which offers a true paradox of choice when it comes to lunchtime outings. We offer great benefits like health care coverage, a full day per week on personal growth (read: Open Source Fridays!), and Taco Tuesdays at the bar below us.</p>
+            <p>
+              Bendyworks provides a welcoming environment that embraces and encourages diversity. As backers of both uxmad and Madison Ruby, we work hard to ensure these conferences appeal to and represent many backgrounds. And while the genetic makeup of our current team isn't exactly the most heterogeneous, we don't let that define our opinions.
+            </p>
+            <p>
+              If you think you're the perfect match for Bendyworks, email careers@bendyworks.com, drop by our office, or strike up a conversation at one of the many conferences we attend. If we're impressed, we'll make a place for you here.
+            </p>
+          </div>
 
-<div class="offices">
-  <div class="row">
-    <div class="offices-content large-12 columns">
-      <h2>Our Offices</h2>
-      <div class="madison-office large-6 columns">
-        <h3 class="office-title">
-          Madison
-        </h3>
-        <p class="office-description">
-          Prompta appetere has eu, legimus appellantur ex pro, eu soluta democritum qui. Graeco omnesque mei ea, no consul partem expetenda eam. Eam no congue viderer facilisi, id denique albucius suscipit vel, ut qui soleat bonorum. At eam sumo harum omnes. Melius doctus vocent et vis, quot viderer iudicabit et eum. An nec modo convenire, mea et simul lobortis. No fabellas forensibus omittantur est, est no option appetere.
-        </p>
+        </div>
       </div>
-      <div class="sf-office large-6 columns">
-        <h3 class="office-title">
-          San Fransisco
-        </h3>
-        <p class="office-description">
-          Prompta appetere has eu, legimus appellantur ex pro, eu soluta democritum qui. Graeco omnesque mei ea, no consul partem expetenda eam. Eam no congue viderer facilisi, id denique albucius suscipit vel, ut qui soleat bonorum. At eam sumo harum omnes. Melius doctus vocent et vis, quot viderer iudicabit et eum. An nec modo convenire, mea et simul lobortis. No fabellas forensibus omittantur est, est no option appetere.
-        </p>
+
+
+
+<!--
+      <div class="careers-content-box-1">
+        <div class="row">
+          <div class="careers-content-1 large-8 large-centered columns">
+            <h2>
+              Madison
+            </h2>
+            <p>
+             Prompta appetere has eu, legimus appellantur ex pro, eu soluta democritum qui. Graeco omnesque mei ea, no consul partem expetenda eam. Eam no congue viderer facilisi, id denique albucius suscipit vel, ut qui soleat bonorum. At eam sumo harum omnes. Melius doctus vocent et vis, quot viderer iudicabit et eum. An nec modo convenire, mea et simul lobortis. No fabellas forensibus omittantur est, est no option appetere.
+           </p>
+         </div>
+       </div>
+     </div>
+     <div class="careers-content-box-2">
+      <div class="row">
+        <div class="careers-content-title-2 large-8 large-centered columns">
+          <h2>
+            San Fransisco
+          </h2>
+          <p>
+           Prompta appetere has eu, legimus appellantur ex pro, eu soluta democritum qui. Graeco omnesque mei ea, no consul partem expetenda eam. Eam no congue viderer facilisi, id denique albucius suscipit vel, ut qui soleat bonorum. At eam sumo harum omnes. Melius doctus vocent et vis, quot viderer iudicabit et eum. An nec modo convenire, mea et simul lobortis. No fabellas forensibus omittantur est, est no option appetere.
+         </p>
+       </div>
+     </div>
+   </div> -->
+
+        <div class="career-pictures">
+          <div class="row">
+            <div class="pictures large-12 columns">
+              <h2 class="picture-title align-center">
+                CULTURE / PERKS
+              </h2>
+              <img src="http://placehold.it/300x200" class="large-4 columns">
+              <img src="http://placehold.it/300x200" class="large-4 columns">
+              <img src="http://placehold.it/300x200" class="large-4 columns">
+              <img src="http://placehold.it/300x200" class="large-4 columns">
+              <img src="http://placehold.it/300x200" class="large-4 columns">
+              <img src="http://placehold.it/300x200" class="large-4 columns">
+            </div>
+          </div>
+        </div>
       </div>
-    </div>
-  </div>
-</div>
-<div class="careers-content-box-1">
-  <div class="row">
-    <div class="careers-content-1 large-8 large-centered columns">
-      <h2>
-        Ullum tincidunt intellegam pro ut, nostro reprimique disputando vix te.
-      </h2>
-      <p>
-        Ad qui ponderum indoctum, at tempor docendi adversarium usu, electram ullamcorper signiferumque an vel. Te pro suas posse, ne cum habeo mundi fabulas, laoreet oporteat deserunt has in. Has idque noluisse sapientem ad. Odio facer his cu, vis zril aliquando id, ad brute malorum scripserit usu. Eum ex oblique tacimates, in vis ignota doming. Possim menandri persecuti in vis.
-      </p>
-    </div>
-  </div>
-</div>
-<div class="careers-content-box-2">
-  <div class="row">
-    <div class="careers-content-title-2 large-8 large-centered columns">
-      <h2>
-        Ullum tincidunt intellegam pro ut, nostro reprimique disputando vix te.
-      </h2>
-      <p>
-        Ad qui ponderum indoctum, at tempor docendi adversarium usu, electram ullamcorper signiferumque an vel. Te pro suas posse, ne cum habeo mundi fabulas, laoreet oporteat deserunt has in. Has idque noluisse sapientem ad. Odio facer his cu, vis zril aliquando id, ad brute malorum scripserit usu. Eum ex oblique tacimates, in vis ignota doming. Possim menandri persecuti in vis.
-      </p>
-    </div>
-  </div>
-</div>
 
-<div class="career-pictures">
-  <div class="row">
-    <div class="pictures large-12 columns">
-      <h2 class="picture-title">
-        Other Stuff
-      </h2>
-      <img src="http://placehold.it/300x200" class="large-4 columns">
-      <img src="http://placehold.it/300x200" class="large-4 columns">
-      <img src="http://placehold.it/300x200" class="large-4 columns">
-      <img src="http://placehold.it/300x200" class="large-4 columns">
-      <img src="http://placehold.it/300x200" class="large-4 columns">
-      <img src="http://placehold.it/300x200" class="large-4 columns">
-    </div>
-  </div>
-</div>
-
-
-<%= render 'partials/footer' %>
-
-       <footer>
-      <div class="footer row">
-        <nav class="footer_nav large-12 large-centered columns">
-          <ul class="title-nav">
-            <li>
-              <a class="title">One thing</a>
-              <ul class="footer-sub-nav">
-                <li>
-                  <a href="#"> FAQs </a>
-                </li>
-                <li>
-                  <a href="#">Policies</a>
-                </li>
-                <li>
-                  <a href ="#">Birds</a>
-                </li>
-              </ul>
-            </li>
-            <li>
-              <a href="#">Other thing</a>
-            </li>
-            <li>
-              <a href="#">Another thing</a>
-            </li>
-            <li>
-              <a href="#">More things</a>
-            </li>
-            <li>
-              <a href="#">blerp</a>
-            </li>
-            <li>
-              <a href="#">beelp</a>
-            </li>
-          </ul>
-        </nav>
-      </div>
-    </footer>
-
-	<script>
-	document.write('<script src=' +
-		('__proto__' in {} ? 'js/vendor/zepto' : 'js/vendor/jquery') +
-		'.js><\/script>')
-	</script>
-
-	<script src="js/foundation.min.js"></script>
-  <!--
-
-  <script src="js/foundation/foundation.js"></script>
-
-  <script src="js/foundation/foundation.alerts.js"></script>
-
-  <script src="js/foundation/foundation.clearing.js"></script>
-
-  <script src="js/foundation/foundation.cookie.js"></script>
-
-  <script src="js/foundation/foundation.dropdown.js"></script>
-
-  <script src="js/foundation/foundation.forms.js"></script>
-
-  <script src="js/foundation/foundation.joyride.js"></script>
-
-  <script src="js/foundation/foundation.magellan.js"></script>
-
-  <script src="js/foundation/foundation.orbit.js"></script>
-
-  <script src="js/foundation/foundation.reveal.js"></script>
-
-  <script src="js/foundation/foundation.section.js"></script>
-
-  <script src="js/foundation/foundation.tooltips.js"></script>
-
-  <script src="js/foundation/foundation.topbar.js"></script>
-
-  <script src="js/foundation/foundation.interchange.js"></script>
-
-  <script src="js/foundation/foundation.placeholder.js"></script>
-
-  <script src="js/foundation/foundation.abide.js"></script>
-
--->
-
-<script>
-$(document).foundation();
-</script>
-</body>
-</html>
+    <%= render 'partials/footer' %>
