--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -4,12 +4,13 @@
 		<div class="intro-content">
 			<div class="intro">
 				<div class="row">
-					<div class="intro-content right large-6 columns">
-						<h2 class="intro-title">
+					<div class="intro-content right large-8 columns">
+						<h1>
 							WE DESIGN, BUILD AND FIX DIGITAL APPLICATIONS.
-						</h2>
-						<p class="sub-title">
 
+						</h1>
+						<p class="sub-title">
+	Bendyworks is a multidisciplinary team of web artisans that collaborates with forward-thinking customers to turn innovative ideas into elegant digital applications that charm the people who use them.
 						</p>
 					</div>
 				</div>
@@ -18,32 +19,37 @@
 	</div>
 
 	<div class="info-box">
-		<div class="row">
-			<div class="large-12 columns">
+		<div class="row pad-more">
+			<div class="large-8 left">
+				<a href="#" data-reveal-id="myModal">
+					<%= image_tag "vid.png" %>
+				</a>
+			</div>
+
+			<div class="large-4 right columns">
 				<div class="home-box-content large-12 columns">
 					<h2 class="intro-title-2">
-							Bendyworks is a multidisciplinary team of web artisans that collaborates with forward-thinking customers to turn innovative ideas into elegant digital applications that charm the people who use them.
+						So you Have An Idea?
 					</h2>
 					<p class"sub-title-2">
-						Phasellus mi ipsum, sagittis sit amet lectus sit amet, laoreet porttitor sapien. Mauris et odio molestie, vulputate orci ut, pharetra tellus. Donec vel porta ipsum. Nulla id sagittis risus. Donec interdum nisl at est mattis, ac venenatis quam luctus. Vivamus pharetra tortor ac blandit eleifend. Ut sed est quis ligula gravida fringilla.
-
+						So you have an idea and need something built.
 					</p>
 				</div>
 			</div>
 		</div>
 	</div>
-</div>
 
 	<div class="box-2">
 		<div class="row">
 			<div class="large-12 columns">
 				<div class="home-box-content large-6 columns">
 					<h2 class="intro-title-2">
-						Ut nunc mi, auctor sit amet tempor in
+						Our Work
 					</h2>
 					<p class"sub-title-2">
-						Phasellus mi ipsum, sagittis sit amet lectus sit amet, laoreet porttitor sapien. Mauris et odio molestie, vulputate orci ut, pharetra tellus. Donec vel porta ipsum. Nulla id sagittis risus. Donec interdum nisl at est mattis, ac venenatis quam luctus. Vivamus pharetra tortor ac blandit eleifend. Ut sed est quis ligula gravida fringilla.
+						We've done some amazing things for some amazing clients.
 					</p>
+					<a href="/our_work" class="button radius">Check them out.</a>
 				</div>
 				<div class="large-6 columns">
 					<img src="http://placehold.it/400x500">
@@ -62,18 +68,19 @@
 				</div>
 				<div class="home-box-content large-6 columns">
 					<h2 class="intro-title-2">
-						Ut nunc mi, auctor sit amet tempor in
+						About Bendyworks
 					</h2>
 					<p class"sub-title-2">
-						Phasellus mi ipsum, sagittis sit amet lectus sit amet, laoreet porttitor sapien. Mauris et odio molestie, vulputate orci ut, pharetra tellus. Donec vel porta ipsum. Nulla id sagittis risus. Donec interdum nisl at est mattis, ac venenatis quam luctus. Vivamus pharetra tortor ac blandit eleifend. Ut sed est quis ligula gravida fringilla.
+						A great software experience requires elegant, flexible code and a delightful, intuitive interface. The result is a digital application that looks beautiful, functions perfectly and delights users. Our team works together to craft an integrated experience so your application exceeds expectations.
 					</p>
+					<a href="/how_we_work" class="button radius">Read our Story</a>
 				</div>
 
 			</div>
 		</div>
 	</div>
 </div>
-
+<!--
 
 	<div class="full-width bg-white top">
 		<div class="row">
@@ -90,5 +97,5 @@
 </div>
 
 
-
+ -->
 <%= render 'partials/footer' %>
