--- a/app/views/pages/our_blog_deep.html.erb
+++ b/app/views/pages/our_blog_deep.html.erb
@@ -21,10 +21,14 @@
   </div>
 <div class="full-width light-gray">
    <div class="row pad">
-    <h2 class="intro-title">
-      Featured Posts
-    </h2>
-    <%= render 'partials/featured_posts' %>
+    <div class="large-6 columns">
+      <p>Previous Post</p>
+      <h3><a href="/our_blog_deep">From Ruby to Haskell, Part 2: Similarity, Refactoring, and Patterns</a></h3>
+    </div>
+    <div class="large-6 columns">
+      <p>Next Post</p>
+      <h3><a href="/our_blog_deep">Give Yourself a Security Makeover</a></h3>
+    </div>
   </div>
 </div>
 </div>
