--- a/app/views/pages/our_work.html.erb
+++ b/app/views/pages/our_work.html.erb
@@ -8,21 +8,20 @@
        </h2>
        <h4 class="white">
         Browse our case studies to see how we turn great ideas into charming experiences and elegant applications.
-       </h4>
+      </h4>
     </div>
-   </div>
- </div>
+  </div>
+</div>
 
 
-   <div class="work-box two">
-    <div class="row">
-      <div class="large-12 columns">
-        <div class="large-6 columns">
-          <h2 class="intro-title-2">
-            Ut nunc mi, auctor sit amet tempor in
-          </h2>
+<div class="work-box two">
+  <div class="row">
+    <div class="large-12 columns">
+      <div class="large-6 columns">
+        <h2 class="intro-title-2">
+          Getty Images          </h2>
           <p class"sub-title-2">
-            Phasellus mi ipsum, sagittis sit amet lectus sit amet, laoreet porttitor sapien. Mauris et odio molestie, vulputate orci ut, pharetra tellus. Donec vel porta ipsum. Nulla id sagittis risus. Donec interdum nisl at est mattis, ac venenatis quam luctus. Vivamus pharetra tortor ac blandit eleifend. Ut sed est quis ligula gravida fringilla.
+            When Getty Images needed to move their website Photos.com off of an obsolete framework, they brought in Bendyworks to re-write the codebase.
           </p>
           <a href="/case_study_single" class="button work-button">Read More</a>
         </div>
@@ -44,41 +43,43 @@
         </div>
         <div class="large-6 columns">
           <h2 class="intro-title-2">
-            Ut nunc mi, auctor sit amet tempor in
-          </h2>
-          <p class"sub-title-2">
-            Phasellus mi ipsum, sagittis sit amet lectus sit amet, laoreet porttitor sapien. Mauris et odio molestie, vulputate orci ut, pharetra tellus. Donec vel porta ipsum. Nulla id sagittis risus. Donec interdum nisl at est mattis, ac venenatis quam luctus. Vivamus pharetra tortor ac blandit eleifend. Ut sed est quis ligula gravida fringilla.
-          </p>
-          <a href="/case_study_single" class="button work-button">Read More</a>
+            MOZ Analytics         </h2>
+            <p class"sub-title-2">
+              Adapt. Learn. Rock. How we took an ongoing project and an unfamiliar framework and ran with it.
+            </p>
+            <a href="/case_study_single" class="button work-button">Read More</a>
+          </div>
         </div>
       </div>
     </div>
-  </div>
 
 
-     <div class="work-box four">
-    <div class="row">
-      <div class="large-12 columns">
-        <div class="large-6 columns">
-          <h2 class="intro-title-2">
-            Ut nunc mi, auctor sit amet tempor in
-          </h2>
-          <p class"sub-title-2">
-            Phasellus mi ipsum, sagittis sit amet lectus sit amet, laoreet porttitor sapien. Mauris et odio molestie, vulputate orci ut, pharetra tellus. Donec vel porta ipsum. Nulla id sagittis risus. Donec interdum nisl at est mattis, ac venenatis quam luctus. Vivamus pharetra tortor ac blandit eleifend. Ut sed est quis ligula gravida fringilla.
-          </p>
-          <a href="/case_study_single" class="button work-button">Read More</a>
+    <div class="work-box four">
+      <div class="row">
+        <div class="large-12 columns">
+          <div class="large-6 columns">
+            <h2 class="intro-title-2">
+              Murfie
+            </h2>
+            <p class"sub-title-2">
+              A local entrepreneur approached us with rather ingenious idea: they wanted to create an online marketplace for new and used music, where music-lovers could buy, sell, and trade albums in their own online shops.
+            </p>
+            <a href="/case_study_single" class="button work-button">Read More</a>
+          </div>
+
+
+          <div class="large-6 columns">
+            <img src="http://placehold.it/400x400">
+          </div>
+
         </div>
-
-
-        <div class="large-6 columns">
-          <img src="http://placehold.it/400x400">
-        </div>
-
       </div>
     </div>
-  </div>
 
-  <div class="client-list">
+    <%= render 'partials/more_work' %>
+
+
+    <div class="client-list">
       <div class="row">
         <div class="client large-12 columns">
           <div class="client-title large-12 columns">Some of our Clients!</div>
@@ -117,6 +118,6 @@
         </div>
       </div>
     </div>
-</div>
+  </div>
 
-    <%= render 'partials/footer' %>
+  <%= render 'partials/footer' %>
