--- a/app/views/pages/how_we_work.html.erb
+++ b/app/views/pages/how_we_work.html.erb
@@ -4,7 +4,7 @@
     <div class="row pad">
       <div class="large-8 push-4 columns">
         <h2 class="white">
-          About Us
+          <%= t('about.hero.title', :default => 'About me') %>
         </h2>
         <h4 class="white">
          A great software experience requires elegant, flexible code and a delightful, intuitive interface. The result is a digital application that looks beautiful, functions perfectly and delights users. Our team works together to craft an integrated experience so your application exceeds expectations.
